[tool.poetry]
name = "nbagpt"
version = "0.1.0"
description = ""
authors = ["ashishdatta <ashishbdatta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = ">=1.5.3, <2.0.0"
streamlit = "^1.27.2"
python-dotenv = "^1.0.0"
pandasai = "^1.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
